# libcrab

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/crab/: crab.hh  version.h
include/crab/core/: core.hh
include/crab/core/details/: object.hh  safe_object.hh  tag_invoke.hh
include/crab/cpp/details/: consteval_counter.hh  macros.hh
include/crab/ops/: ops.hh
include/crab/ops/details/: fn_once.hh
include/crab/result/: result.hh
include/crab/result/details/: result.hh  storage.hh
src/: core.cc
